# raytracing-cpp

./: CMakeLists.txt  README.md  compile.sh  exec.sh
src/: aabb.h  bvh.h  camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  optim.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  thread_pool.h  vec3.h
